fix all blue buttons on mobile

--- a/gambit.css
+++ b/gambit.css
@@ -230,7 +230,9 @@ select {
 }
 
 
-.back-button { 
+.back-button {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   height: 40px;
   width: fit-content;
   background-color: #C48037;
@@ -346,6 +348,8 @@ select {
 } */
 
 .game-button {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   margin: 0.2rem;
   height: 20%;
   width: 50;
