--- a/mainMenu.css
+++ b/mainMenu.css
@@ -51,6 +51,8 @@ body {
 }
 
 .game-button {
+    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     margin: 0.5rem;
     height: 50%;
     width: 50;
@@ -89,6 +91,8 @@ body {
   }
 
   .eod-button {
+    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     margin: 0.5rem;
     height: 50%;
     width: 50;
