--- a/shop.css
+++ b/shop.css
@@ -21,7 +21,9 @@ body {
     width: 98vw;
 }
 
-.back-button { 
+.back-button {
+    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     margin: 0.5rem;
     height: 40px;
     width: fit-content;
